# gh-greets-qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
installer/: component.qs
src/: main.cpp
